--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -25,23 +25,21 @@ deploy-ecs-primary: test-creds primary_infrastructure primary_ecs
 deploy: deploy-all
 	@echo "*** Deployment Outputs ****"
 	@echo ""
-	@echo "Canaries in ${PRIMARY_REGION}:"
+	@echo "Canaries:"
 	@echo "https://us-east-1.console.aws.amazon.com/cloudwatch/home?region=${PRIMARY_REGION}#synthetics:canary/list"
-	@echo ""
-	@echo "Canaries in ${STANDBY_REGION}:"
 	@echo "https://us-east-1.console.aws.amazon.com/cloudwatch/home?region=${STANDBY_REGION}#synthetics:canary/list"
 	@echo ""
-	@echo "Client for in-VPC Browser in ${PRIMARY_REGION}:"
+	@echo "Clients for in-VPC Browser:"
 	@echo "https://${PRIMARY_REGION}.console.aws.amazon.com/systems-manager/fleet-manager/managed-nodes?region=${PRIMARY_REGION}"
-	@echo ""
-	@echo "Client for in-VPC Browser in ${STANDBY_REGION}:"
 	@echo "https://${STANDBY_REGION}.console.aws.amazon.com/systems-manager/fleet-manager/managed-nodes?region=${STANDBY_REGION}"
 	@echo ""
-	@echo "Administrator user password in ${PRIMARY_REGION}:"
+	@echo "Administrator user passwords:"
 	@echo "https://${PRIMARY_REGION}.console.aws.amazon.com/secretsmanager/secret?name=mr-app-windowspassword${ENV}&region=${PRIMARY_REGION}"
-	@echo ""
-	@echo "Administrator user password in ${STANDBY_REGION}:"
 	@echo "https://${STANDBY_REGION}.console.aws.amazon.com/secretsmanager/secret?name=mr-app-windowspassword${ENV}&region=${STANDBY_REGION}"
+	@echo ""
+	@echo "SSM Runbooks for failover execution:"
+	@echo "https://${PRIMARY_REGION}.console.aws.amazon.com/systems-manager/documents"
+	@echo "https://${STANDBY_REGION}.console.aws.amazon.com/systems-manager/documents"
 
 create-peer:
 	@echo "Verifying if the AWSServiceRoleForECS exists; if not; this will be created for you..."
