--- a/deployment/database/aurora/aurora-global-primary-cluster.yml
+++ b/deployment/database/aurora/aurora-global-primary-cluster.yml
@@ -159,6 +159,7 @@ Resources:
         - slowquery
       EnableIAMDatabaseAuthentication: true
       Engine: aurora-mysql
+      EngineVersion: 8.0.mysql_aurora.3.04.0
       KmsKeyId: !Ref DBStorageEncryptionKMSKey
       MasterUsername: !Sub '{{resolve:secretsmanager:mr-app/${NamingPrefix}-${GlobalClusterIdentifier}-UserCredentials${Env}:SecretString:username}}'
       MasterUserPassword: !Sub '{{resolve:secretsmanager:mr-app/${NamingPrefix}-${GlobalClusterIdentifier}-UserCredentials${Env}:SecretString:password}}'
