--- a/deployment/database/aurora/aurora-global-standby-cluster.yml
+++ b/deployment/database/aurora/aurora-global-standby-cluster.yml
@@ -140,6 +140,7 @@ Resources:
         - slowquery
       EnableIAMDatabaseAuthentication: true
       Engine: aurora-mysql
+      EngineVersion: 8.0.mysql_aurora.3.04.0
       GlobalClusterIdentifier: !Sub '${NamingPrefix}-${GlobalClusterIdentifier}${Env}'
       KmsKeyId: !Ref DBStorageEncryptionKMSKey
       Port: '3306'
