--- a/deployment/regionalBaseInfra.yaml
+++ b/deployment/regionalBaseInfra.yaml
@@ -231,32 +231,84 @@ Resources:
     Properties:
       VpcId: !Sub '{{resolve:secretsmanager:VpcId-${AWS::Region}${Env}}}'
   
+  KmsKey:
+    Type: "AWS::KMS::Key"
+    Properties:
+      Enabled: true
+      EnableKeyRotation: true
+      Description: "retail-store-ar CMK"
+      KeyUsage: "ENCRYPT_DECRYPT"
+      KeyPolicy: !Sub |
+          {
+            "Version" : "2012-10-17",
+            "Id" : "key-default-1",
+            "Statement" : [ {
+              "Sid" : "Enable IAM User Permissions",
+              "Effect" : "Allow",
+              "Principal" : {
+                "AWS" : "arn:aws:iam::${AWS::AccountId}:root"
+              },
+              "Action" : "kms:*",
+              "Resource" : "*"
+            } ]
+          }
+      KeySpec: "SYMMETRIC_DEFAULT"
+      MultiRegion: false
+  KmsKeyParam:
+    Type: AWS::SSM::Parameter
+    Properties: 
+      Type: String
+      Name: !Sub retail-store-ar${Env}
+      Value: !Ref KmsKey
 #Ecr Repos
   CheckoutRepo:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: !Sub 'checkout${Env}'
+      ImageTagMutability: IMMUTABLE
+      EncryptionConfiguration:
+        EncryptionType: KMS
+        KmsKey: !Ref KmsKey
   CatalogRepo:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: !Sub 'catalog${Env}'
+      ImageTagMutability: IMMUTABLE
+      EncryptionConfiguration:
+        EncryptionType: KMS
+        KmsKey: !Ref KmsKey
   CartsRepo:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: !Sub 'carts${Env}'
+      ImageTagMutability: IMMUTABLE
+      EncryptionConfiguration:
+        EncryptionType: KMS
+        KmsKey: !Ref KmsKey
   AssetsRepo:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: !Sub 'assets${Env}'
+      ImageTagMutability: IMMUTABLE
+      EncryptionConfiguration:
+        EncryptionType: KMS
+        KmsKey: !Ref KmsKey
   OrdersRepo:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: !Sub 'orders${Env}'
+      ImageTagMutability: IMMUTABLE
+      EncryptionConfiguration:
+        EncryptionType: KMS
+        KmsKey: !Ref KmsKey
   UIRepo:
     Type: AWS::ECR::Repository
     Properties:
       RepositoryName: !Sub 'ui${Env}'
-
+      ImageTagMutability: IMMUTABLE
+      EncryptionConfiguration:
+        EncryptionType: KMS
+        KmsKey: !Ref KmsKey
 
 # Canary Security Group - In this stack since it take Lambda 20 mins to delete the ENIs it manages
   canarySg:
